syntax = "proto3";

package sample.v1;

option go_package = "github.com/tochemey/goakt/examples/protos/pb/v1;samplepb";

// WsMessage is the websocket message
message WsMessage {
  // Specifies the broadcast content
  string content = 1 [json_name = "content"];
  // Specifies the session id
  string session_id = 2 [json_name = "sessionId"];
  // Specifies the message type
  WSMessageType message_type =3 [json_name = "messageType"];
}

// This is just for the example purpose.
enum WSMessageType {
  WS_MESSAGE_TYPE_UNSPECIFIED = 0;
  WS_MESSAGE_TYPE_EXIT =1;
}

// StopServer stops the websocket server
// This is just for the example purpose.
message StopServer {}

